--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@ body {
   font-family: "Poppins";
   background: #f1f1f1;
 }
-h1,h2,h3,h4 {
+h1,h2,h4 {
+  font-weight: 500;
+}
+h3{
+  margin-bottom: 0;
   font-weight: 500;
 }
 .App {
@@ -28,11 +32,7 @@ a {
 
 .attractiontypes a {
   margin-right: 10px;
-  color: green;
-}
-
-.smalls {
-  margin: 0px 10px;
+  color: #877cda;
 }
 
 .navbar {
@@ -48,8 +48,13 @@ a {
 }
 
 .links-to-pages :hover{
-  background-color: green;
-  color: #f1f1f1;
+  background-color: #284466;
+  color: #ffffff;
+}
+
+.smalls {
+  color: #877cda;
+  margin: 0px 10px;
 }
 
 .links-to-pages {
@@ -58,6 +63,12 @@ a {
   padding-top: 10px;
   padding-left: 20px;
   margin-bottom: 10px;
+  color: #284466;
+}
+
+.link {
+  color: #284466;
+  text-decoration: none !important;
 }
 
 .navbar-brand {
@@ -82,9 +93,18 @@ a {
 
 .city-card {
   margin: 20px 50px;
+  padding: 1%;
   justify-content: center;
   background-color: white;
   border-radius: 25px;
+}
+
+.home-page {
+  margin: 0 5%;
+}
+
+.city-name {
+  margin-bottom: 0;
 }
 
 .whole-page {
@@ -101,6 +121,7 @@ a {
   border-radius: 10px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  outline: 2px solid #507199;
 }
 
 .select-container {
@@ -154,6 +175,11 @@ a {
   position: relative;
   text-align: center;
   display: flexbox;
+  transition: transform 0.3s ease;
+}
+
+.ticket-card:hover {
+  transform: scale(1.1);
 }
 
 .price-badge {
@@ -161,8 +187,8 @@ a {
   top: 10px;
   left: 10px;
   padding: 5px;
-  background-color: yellow;
-  color: black;
+  background-color: #284466;
+  color: white;
   font-weight: bold;
   border-radius: 5px;
 }
@@ -233,12 +259,43 @@ button {
   border-radius: 5px;
 }
 
-.login-form-card {
-  background-color: white;;
+.form-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
 }
 
-.login-page {
-  align-items: center;
+.login-form-card {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  align-items: center;
+  background-color: white;
+  border-radius: 25%;
+  padding: 3% 2%;
+  outline: 2px solid #507199;
 }
+
+.form-feedback {
+  color: red;
+  font-size: 15px;
+}
+
+.login-group {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.router {
+  margin-top: 10px;
+  font-size: 15px;
+}
+
+.label {
+  justify-content: center;
+}
+
